--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/F-R-R-B/vacation-nation-backend#readme",
   "dependencies": {
+    "@auth0/auth0-react": "^1.11.0",
     "axios": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
