--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.5",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.5",
     "mongoose": "^6.6.5"
   }
 }
